{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 196,
  "lineage": "9b0e8cac-42a0-489d-e93b-5755bea8f77f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0ed1da8bc750cc23e",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-204-236-133-102.us-west-1.compute.amazonaws.com",
            "public_ip": "204.236.133.102",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d50e5e845c552faf",
            "arn": "arn:aws:ec2:us-west-1:838207118309:instance/i-06572e135e9a1ddcf",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my-ec2-instance-profile1",
            "id": "i-06572e135e9a1ddcf",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "nagato",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a379ea6b8a27735e",
            "private_dns": "ip-10-0-0-119.us-west-1.compute.internal",
            "private_ip": "10.0.0.119",
            "public_ip": "54.176.84.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-015e1c1ba7128849e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060737cd8d4cbc25d",
            "tags": {
              "Name": "jumphost"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05785f53825d2da78"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.my_instance_profile1",
            "aws_iam_role.osos-node",
            "aws_security_group.eks",
            "aws_subnet.osos-pub1",
            "aws_vpc.osos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "os-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:838207118309:internet-gateway/igw-029d52d7cb80c2cfa",
            "id": "igw-029d52d7cb80c2cfa",
            "owner_id": "838207118309",
            "tags": {
              "Name": "eks-gw"
            },
            "vpc_id": "vpc-0110ccb60ca2d0a46"
          },
          "dependencies": [
            "aws_vpc.osos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed1da8bc750cc23e",
            "id": "nat-0afc4dd074fc0d253",
            "network_interface_id": "eni-081d127383f188d1f",
            "private_ip": "10.0.0.148",
            "public_ip": "204.236.133.102",
            "subnet_id": "subnet-060737cd8d4cbc25d",
            "tags": {
              "Name": "eks--nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.osos-pub1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:838207118309:route-table/rtb-055c4f53ec25a716e",
            "id": "rtb-055c4f53ec25a716e",
            "owner_id": "838207118309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0afc4dd074fc0d253",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "osos-rw-private"
            },
            "vpc_id": "vpc-0110ccb60ca2d0a46"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.osos-pub1",
            "aws_vpc.osos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:838207118309:route-table/rtb-0652d27ae70ecef8b",
            "id": "rtb-0652d27ae70ecef8b",
            "owner_id": "838207118309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-029d52d7cb80c2cfa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "osos-rw"
            },
            "vpc_id": "vpc-0110ccb60ca2d0a46"
          },
          "dependencies": [
            "aws_internet_gateway.os-gw",
            "aws_vpc.osos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6afea00809cf25b",
            "route_table_id": "rtb-0652d27ae70ecef8b",
            "subnet_id": "subnet-060737cd8d4cbc25d"
          },
          "dependencies": [
            "aws_internet_gateway.os-gw",
            "aws_route_table.public",
            "aws_subnet.osos-pub1",
            "aws_vpc.osos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002cf675baf75261d",
            "route_table_id": "rtb-0652d27ae70ecef8b",
            "subnet_id": "subnet-012a465587ba9ddc7"
          },
          "dependencies": [
            "aws_internet_gateway.os-gw",
            "aws_route_table.public",
            "aws_subnet.osos-pub2",
            "aws_vpc.osos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pv1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b837882e51dd726",
            "route_table_id": "rtb-055c4f53ec25a716e",
            "subnet_id": "subnet-01ef1eb919e244c2e"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.osos-pub1",
            "aws_subnet.osos-pv1",
            "aws_vpc.osos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pv2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbf2c1e6fe5b850a",
            "route_table_id": "rtb-055c4f53ec25a716e",
            "subnet_id": "subnet-0719c70b7c5552d0a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.osos-pub1",
            "aws_subnet.osos-pv2",
            "aws_vpc.osos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:838207118309:security-group/sg-05785f53825d2da78",
            "description": "Allow HTTP traffic from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05785f53825d2da78",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eks-sec-group",
            "name_prefix": "",
            "owner_id": "838207118309",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0110ccb60ca2d0a46"
          },
          "dependencies": [
            "aws_vpc.osos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "osos-pub1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:838207118309:subnet/subnet-060737cd8d4cbc25d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-060737cd8d4cbc25d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "838207118309",
            "tags": {
              "Name": "public-sub1",
              "kubernetes.io/cluster/osos-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "public-sub1",
              "kubernetes.io/cluster/osos-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0110ccb60ca2d0a46"
          },
          "dependencies": [
            "aws_vpc.osos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "osos-pub2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:838207118309:subnet/subnet-012a465587ba9ddc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-012a465587ba9ddc7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "838207118309",
            "tags": {
              "Name": "public-sub2",
              "kubernetes.io/cluster/osos-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "public-sub2",
              "kubernetes.io/cluster/osos-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0110ccb60ca2d0a46"
          },
          "dependencies": [
            "aws_vpc.osos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "osos-pv1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:838207118309:subnet/subnet-01ef1eb919e244c2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01ef1eb919e244c2e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "838207118309",
            "tags": {
              "Name": "private-sub1",
              "kubernetes.io/cluster/osos-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-sub1",
              "kubernetes.io/cluster/osos-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0110ccb60ca2d0a46"
          },
          "dependencies": [
            "aws_vpc.osos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "osos-pv2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:838207118309:subnet/subnet-0719c70b7c5552d0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0719c70b7c5552d0a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "838207118309",
            "tags": {
              "Name": "private-sub2",
              "kubernetes.io/cluster/osos-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-sub2",
              "kubernetes.io/cluster/osos-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0110ccb60ca2d0a46"
          },
          "dependencies": [
            "aws_vpc.osos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "osos-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:838207118309:vpc/vpc-0110ccb60ca2d0a46",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-018f123056e0a0baa",
            "default_route_table_id": "rtb-0261204029c8bbf62",
            "default_security_group_id": "sg-0aa94e814f60ec8a9",
            "dhcp_options_id": "dopt-0123993d877706532",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0110ccb60ca2d0a46",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0261204029c8bbf62",
            "owner_id": "838207118309",
            "tags": {
              "Name": "osos-vpc"
            },
            "tags_all": {
              "Name": "osos-vpc"
            }
          }
        }
      ]
    }
  ]
}